--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.15.5",
+    "html2canvas": "^1.3.2",
     "vue": "^2.6.11",
     "vue-multiple-progress": "^1.6.0"
   },
